# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1064 2012/07/24 09:11:35 mgorny Exp $

  24 Jul 2012; Michał Górny <mgorny@gentoo.org> portage-9999.ebuild:
  Apply user patches.

*portage-2.2.0_alpha120 (18 Jul 2012)

  18 Jul 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha120.ebuild,
  -portage-2.2.0_alpha118.ebuild:
  2.2.0_alpha120 version bump. This includes all of the fixes in 2.1.11.9. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.9 (18 Jul 2012)

  18 Jul 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.9.ebuild,
  -portage-2.1.11.7.ebuild:
  2.1.11.9 version bump. This fixes bug #402197 (allow wildcard atoms to match
  *9999* ebuilds), bug #427068 (fix etc-update --automode -5 to not use mv -i),
  and bug #427036 (emerge KeyError since portage-2.1.11 which is triggered by
  --rebuild-if-new options). Bug #423075 tracks all bugs fixed since
  portage-2.1.10.65.

*portage-2.2.0_alpha119 (18 Jul 2012)

  18 Jul 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha119.ebuild,
  -portage-2.2.0_alpha117.ebuild:
  2.2.0_alpha119 version bump. This includes all of the fixes in 2.1.11.8. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.8 (18 Jul 2012)

  18 Jul 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.8.ebuild,
  -portage-2.1.11.6.ebuild:
  2.1.11.8 version bump. This fixes bug #426476 (fix package moves to work
  correctly with dots in package names for EAPI 4-python). Bug #423075 tracks
  all bugs fixed since portage-2.1.10.65.

*portage-2.2.0_alpha118 (14 Jul 2012)

  14 Jul 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha118.ebuild,
  -portage-2.2.0_alpha116.ebuild:
  2.2.0_alpha118 version bump. This includes all of the fixes in 2.1.11.7. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.7 (14 Jul 2012)
