@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1064 2012/07/24 09:11:35 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1065 2012/07/24 19:17:41 zmedico Exp $
+
+  24 Jul 2012; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
+  Remove /etc/make.globals symlink code (bug #427862).
 
   24 Jul 2012; Michał Górny <mgorny@gentoo.org> portage-9999.ebuild:
   Apply user patches.
